/*
 * $Id$
 */

2009-08-26 14:49 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * include/wxHarbour/wxharbour.ch
  * src/common/wxhfuncs.prg
    * added clause CLASS to @ BROWSE command
    * made optional the var-value on the @ GET command
    
  * src/raddox/TField.prg
    * added ::Type property


2009-08-25 23:59 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  * makefile.bcc
  * makefile.gcc
  * makefile.vc
    * rebuilded makefiles per added file (grid.ch)

  * include/wxHarbour/raddox.ch
    * added commands for:
      * BEGIN FIELDS CLASS ...
      * BEGIN INDEXES CLASS ...
      * CALCFIELDS ...
    * renamed DefineFields, DefineIndexes to have __ prefix

  * src/hrbcompat/tbrowse/wxhBrowse.prg
    * minor code change (editor left spaces)

  * src/hrbcompat/tbrowse/wxhBrowseDbProvider.prg
    % using value on displayfields objects

  * src/raddox/TTable.prg
    ! Fixed error on NIL param on SetIndexName

2009-08-25 13:59 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * src/common/wxhfuncs.prg
    * minor (reordering) cleanup

  * src/hrbcompat/tbrowse/wxhBrowse.prg
    * enabled column zero as RecNo on autofill columns

  * src/hrbcompat/tbrowse/wxhBrowseDbProvider.prg
    * added logic on SetColumnZero to give the row label size
      to an default of wxGRID_AUTOSIZE

  * src/raddox/TAlias.prg
    * removed wrong PushWS/PopWS funcs
    + added Push/Pop methods to put the dataset status on a stack
    * code cleanup

  * src/raddox/TDatabase.prg
    * minor code cleanup

  * src/raddox/TField.prg
    * added name to index created fields

  + include/wxHarbour/wxh/grid.ch
    * added defines for wxgridbase

2009-08-10 18:20 UTC-0400 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
  *  makefile.wat
  -  src/common/wxh_scopelist.cpp
  -  src/hrbcompat/tbrowse/wx_Browse.cpp
     * removed empty source files
